{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 19,
  "lineage": "070c77c5-9569-4d36-1616-062a013acddb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735537156226:vpc/vpc-08e64bde7d2da64d5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04f53a8c13cc279f8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00e6cce4c2623b9db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e64bde7d2da64d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037611e40cec9bc3e",
            "owner_id": "735537156226"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "coughoverflow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:735537156226:loadbalancer/app/coughoverflow-lb/0ab2728c1fb43c97",
            "arn_suffix": "app/coughoverflow-lb/0ab2728c1fb43c97",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "coughoverflow-lb-533553647.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:735537156226:loadbalancer/app/coughoverflow-lb/0ab2728c1fb43c97",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coughoverflow-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08fb5ab453cbb8cee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0010980ea404c7c47"
              },
              {
                "subnet_id": "subnet-01ff8bedc697c3a25"
              },
              {
                "subnet_id": "subnet-04aaa88fe16b55f3f"
              },
              {
                "subnet_id": "subnet-04feae95163a4095a"
              },
              {
                "subnet_id": "subnet-073e4e64b931e9878"
              },
              {
                "subnet_id": "subnet-07ec07cb11e91bb0e"
              }
            ],
            "subnets": [
              "subnet-0010980ea404c7c47",
              "subnet-01ff8bedc697c3a25",
              "subnet-04aaa88fe16b55f3f",
              "subnet-04feae95163a4095a",
              "subnet-073e4e64b931e9878",
              "subnet-07ec07cb11e91bb0e"
            ],
            "tags_all": {
              "Course": "6400",
              "Environment": "Dev",
              "StudentID": "47324000"
            },
            "vpc_id": "vpc-08e64bde7d2da64d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "coughoverflow_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:735537156226:listener/app/coughoverflow-lb/0ab2728c1fb43c97/29438a7cd05dd748",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:735537156226:targetgroup/coughoverflow-tg/f3ac453f8e0d69ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:735537156226:listener/app/coughoverflow-lb/0ab2728c1fb43c97/29438a7cd05dd748",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:735537156226:loadbalancer/app/coughoverflow-lb/0ab2728c1fb43c97",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Course": "6400",
              "Environment": "Dev",
              "StudentID": "47324000"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.coughoverflow_lb",
            "aws_lb_target_group.coughoverflow_tg",
            "aws_security_group.alb_sg",
            "data.aws_subnets.public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "coughoverflow_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:735537156226:targetgroup/coughoverflow-tg/f3ac453f8e0d69ab",
            "arn_suffix": "targetgroup/coughoverflow-tg/f3ac453f8e0d69ab",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:735537156226:targetgroup/coughoverflow-tg/f3ac453f8e0d69ab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:735537156226:loadbalancer/app/coughoverflow-lb/0ab2728c1fb43c97"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coughoverflow-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Course": "6400",
              "Environment": "Dev",
              "StudentID": "47324000"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08e64bde7d2da64d5"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735537156226:security-group/sg-08fb5ab453cbb8cee",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fb5ab453cbb8cee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "coughoverflow-alb-sg",
            "name_prefix": "",
            "owner_id": "735537156226",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Course": "6400",
              "Environment": "Dev",
              "StudentID": "47324000"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e64bde7d2da64d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735537156226:security-group/sg-0c4cf3d80340e1747",
            "description": "Allow traffic from ALB to ECS task on port 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4cf3d80340e1747",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08fb5ab453cbb8cee"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "coughoverflow-ecs-sg",
            "name_prefix": "",
            "owner_id": "735537156226",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Course": "6400",
              "Environment": "Dev",
              "StudentID": "47324000"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e64bde7d2da64d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}